unpackaged/main/default/objects/GT_Brand__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>Business Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Business Support/Career Fairs</fullName>
            </value>
            <value>
                <fullName>Channel/Partner</fullName>
            </value>
            <value>
                <fullName>Corporate Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Corporate – Other</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Gov’t Relations/PA</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>National Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overlay</fullName>
            </value>
            <value>
                <fullName>Public Affairs/Govt’ Relations</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Sales Partner</fullName>
            </value>
            <value>
                <fullName>SCN Sales</fullName>
            </value>
            <value>
                <fullName>Small Cell</fullName>
            </value>
            <value>
                <fullName>Small Cell - In Building</fullName>
            </value>
            <value>
                <fullName>Small Cell Sales</fullName>
            </value>
            <value>
                <fullName>Supply Chain/Diversity</fullName>
            </value>
            <value>
                <fullName>System-wide event</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Hemophilia</fullName>
            </value>
            <value>
                <fullName>NovoLog</fullName>
            </value>
            <value>
                <fullName>Novoeight</fullName>
            </value>
            <value>
                <fullName>Tretten</fullName>
            </value>
            <value>
                <fullName>Rebinyn</fullName>
            </value>
            <value>
                <fullName>Ozempic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>