unpackaged/main/default/objects/GT_Brand__c/fields/Product_Category_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_CrownCastle__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BioPharm</fullName>
            </value>
            <value>
                <fullName>Biopharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Clinical Trial / Global</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Healthcare Professionals (HCP)</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Market Access</fullName>
            </value>
            <value>
                <fullName>Medical Information</fullName>
            </value>
            <value>
                <fullName>Obesity</fullName>
            </value>
            <value>
                <fullName>Patients &amp; HCP</fullName>
            </value>
            <value>
                <fullName>Product Communication</fullName>
            </value>
            <value>
                <fullName>Product Communications</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>