unpackaged/main/default/objects/GT_Brand__c/fields/Product_Theater__c.field-meta.xml
<CustomField>
    <fullName>Product_Theater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Theater</label>
    <referenceTo>Product_Theater__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>