unpackaged/main/default/objects/GT_Brand__c/fields/Promotional_Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Item_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Promotional Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>