unpackaged/main/default/objects/GT_Brand__c/fields/Proposal_Submitted_to_NNI__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Submitted_to_NNI__c</fullName>
    <label>Proposal Submitted to NNI Date</label>
    <type>Date</type>
</CustomField>