unpackaged/main/default/objects/GT_Brand__c/fields/Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_No__c</fullName>
    <label>Purchase Order No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>