unpackaged/main/default/objects/GT_Brand__c/fields/Registration_Attend_Only__c.field-meta.xml
<CustomField>
    <fullName>Registration_Attend_Only__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>GT_Reg_Attend_Only__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>