unpackaged/main/default/objects/GT_Brand__c/fields/Sales_Leader_2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_2__c</fullName>
    <label>Sales Leader 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>