unpackaged/main/default/objects/GT_Brand__c/fields/Sales_Leaders__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leaders__c</fullName>
    <label>Sales Leaders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amatangelo</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Beattie</fullName>
                <isActive>false</isActive>
                <label>Beattie</label>
            </value>
            <value>
                <fullName>Boynton</fullName>
                <isActive>false</isActive>
                <label>Boynton</label>
            </value>
            <value>
                <fullName>Brunatti</fullName>
            </value>
            <value>
                <fullName>Cummings</fullName>
            </value>
            <value>
                <fullName>Davidson</fullName>
            </value>
            <value>
                <fullName>Dolan</fullName>
                <isActive>false</isActive>
                <label>Dolan</label>
            </value>
            <value>
                <fullName>Fagan</fullName>
            </value>
            <value>
                <fullName>Graham</fullName>
            </value>
            <value>
                <fullName>Henderson</fullName>
                <isActive>false</isActive>
                <label>Henderson</label>
            </value>
            <value>
                <fullName>Hurwitz</fullName>
            </value>
            <value>
                <fullName>Kavanagh</fullName>
            </value>
            <value>
                <fullName>Kavey</fullName>
                <isActive>false</isActive>
                <label>Kavey</label>
            </value>
            <value>
                <fullName>Maier</fullName>
            </value>
            <value>
                <fullName>Maitino</fullName>
                <isActive>false</isActive>
                <label>Maitino</label>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Nickla</fullName>
            </value>
            <value>
                <fullName>Nothnagle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paschal</fullName>
            </value>
            <value>
                <fullName>Piekarski</fullName>
                <isActive>false</isActive>
                <label>Piekarski</label>
            </value>
            <value>
                <fullName>Pies</fullName>
            </value>
            <value>
                <fullName>Reddick</fullName>
            </value>
            <value>
                <fullName>Reudink</fullName>
            </value>
            <value>
                <fullName>Smith</fullName>
            </value>
            <value>
                <fullName>Tomlin</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
                <isActive>false</isActive>
                <label>WEST</label>
            </value>
            <value>
                <fullName>Wilkins</fullName>
                <isActive>false</isActive>
                <label>Wilkins</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>