unpackaged/main/default/objects/GT_Brand__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>