unpackaged/main/default/objects/GT_Brand__c/fields/SOW_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_Due_Date__c</fullName>
    <formula>IF((CASE( MOD(((GES_Connect_Event__r.Congress_Start_Date__c) - 110) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 0), ((GES_Connect_Event__r.Congress_Start_Date__c ) - 112) , 
(IF((CASE( MOD(((GES_Connect_Event__r.Congress_Start_Date__c) - 110) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 6), ((GES_Connect_Event__r.Congress_Start_Date__c) - 111) , 
((GES_Connect_Event__r.Congress_Start_Date__c) - 110))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOW Due Date</label>
    <type>Date</type>
</CustomField>