unpackaged/main/default/objects/GT_Brand__c/fields/Speaker_Cost_Actual_CrownCastle__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Cost_Actual_CrownCastle__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Speaking Engagement Costs Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>