unpackaged/main/default/objects/GT_Brand__c/fields/Speaking_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaking Engagement</label>
    <referenceTo>GT_Speaking_Engagement__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>