unpackaged/main/default/objects/GT_Brand__c/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsorship</label>
    <referenceTo>GT_Sponsorship__c</referenceTo>
    <relationshipName>Brands</relationshipName>
    <type>Lookup</type>
</CustomField>