unpackaged/main/default/objects/GT_Brand__c/fields/Sporting_Event__c.field-meta.xml
<CustomField>
    <fullName>Sporting_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sporting Event</label>
    <referenceTo>GT_Sporting_Event__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>