unpackaged/main/default/objects/GT_Brand__c/fields/Survey_Monkey_Due__c.field-meta.xml
<CustomField>
    <fullName>Survey_Monkey_Due__c</fullName>
    <formula>IF((CASE( MOD(((GES_Connect_Event__r.Congress_Start_Date__c ) + 14) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 0), ((GES_Connect_Event__r.Congress_Start_Date__c ) + 12) , 
(IF((CASE( MOD(((GES_Connect_Event__r.Congress_Start_Date__c ) + 14) - DATE(1900, 1, 7), 7), 0, 0, 1,1, 2, 2, 3, 
3, 4, 4 , 5, 5 , 6, 6 ,7 )== 6), ((GES_Connect_Event__r.Congress_Start_Date__c ) + 13) , 
((GES_Connect_Event__r.Congress_Start_Date__c ) + 14))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Monkey Due Date</label>
    <type>Date</type>
</CustomField>