unpackaged/main/default/objects/GT_Brand__c/fields/Symposia__c.field-meta.xml
<CustomField>
    <fullName>Symposia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Symposia</label>
    <referenceTo>Symposia__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>