unpackaged/main/default/objects/GT_Brand__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>BioPharm</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Obesity</fullName>
            </value>
            <value>
                <fullName>Product Communications</fullName>
            </value>
            <value>
                <fullName>Market Access</fullName>
            </value>
            <value>
                <fullName>Medical Information</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Biopharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Clinical Trial / Global</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Healthcare Professionals (HCP)</fullName>
            </value>
            <value>
                <fullName>Patients &amp; HCP</fullName>
            </value>
            <value>
                <fullName>Product Communication</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Hepatology</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Sleep Medicine</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Vaccines</fullName>
            </value>
            <value>
                <fullName>Womens Health</fullName>
            </value>
            <value>
                <fullName>StayWell</fullName>
            </value>
            <value>
                <fullName>Ilum</fullName>
            </value>
            <value>
                <fullName>BioSimilars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>