unpackaged/main/default/objects/GT_Brand__c/fields/Therapeutic_Area_Subgroup__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area_Subgroup__c</fullName>
    <label>Therapeutic Area Subgroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System-wide event</fullName>
            </value>
            <value>
                <fullName>Small Cell</fullName>
            </value>
            <value>
                <fullName>Public Affairs/Govt’ Relations</fullName>
            </value>
            <value>
                <fullName>Business Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Emerging Technologies</fullName>
            </value>
            <value>
                <fullName>Business Support/Career Fairs</fullName>
            </value>
            <value>
                <fullName>Supply Chain/Diversity</fullName>
            </value>
            <value>
                <fullName>Corporate – Other</fullName>
            </value>
            <value>
                <fullName>Hemophilia</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hypo Disease State</fullName>
            </value>
            <value>
                <fullName>Insulins</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Saxenda</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Rethink</fullName>
            </value>
            <value>
                <fullName>Growth Disorder</fullName>
            </value>
            <value>
                <fullName>Data Collection</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Diabetes devices</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Glucagon-Like Peptide-1</fullName>
            </value>
            <value>
                <fullName>Growth Disorders</fullName>
            </value>
            <value>
                <fullName>Hormone Replacement Therapy</fullName>
            </value>
            <value>
                <fullName>Human insulin</fullName>
            </value>
            <value>
                <fullName>Hypo</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Modern insulin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>