unpackaged/main/default/objects/GT_Brand__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Amount_1__c+Amount_2__c+Amount_3__c+Amount_4__c+Amount_5__c+Amount_6__c+Amount_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>