unpackaged/main/default/objects/GT_Brand__c/fields/Value_for_SOW__c.field-meta.xml
<CustomField>
    <fullName>Value_for_SOW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Value for SOW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>