unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_CC.recordType-meta.xml
<RecordType>
    <fullName>Product_CC</fullName>
    <active>true</active>
    <description>Product for CC</description>
    <label>Product CC</label>
</RecordType>