unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_GT.recordType-meta.xml
<RecordType>
    <fullName>Product_GT</fullName>
    <active>true</active>
    <description>Product for GT</description>
    <label>Product GT</label>
</RecordType>