unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_Merck.recordType-meta.xml
<RecordType>
    <fullName>Product_Merck</fullName>
    <active>true</active>
    <label>Product Merck</label>
</RecordType>