unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_NNI.recordType-meta.xml
<RecordType>
    <fullName>Product_NNI</fullName>
    <active>true</active>
    <description>Product for NNI</description>
    <label>Product NNI</label>
</RecordType>