unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Product_Pharma</fullName>
    <active>true</active>
    <label>Product Pharma</label>
</RecordType>