unpackaged/main/default/objects/GT_Brand__c/recordTypes/Product_Sig_Sauer.recordType-meta.xml
<RecordType>
    <fullName>Product_Sig_Sauer</fullName>
    <active>true</active>
    <label>Product Sig Sauer</label>
</RecordType>