unpackaged/main/default/objects/GT_Brand__c/validationRules/Atleast_one_LookUp_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Atleast_one_LookUp_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Event__c ),
ISBLANK( Exhibit__c ),
ISBLANK( GES_Connect_Event__c ),
ISBLANK( Meeting_Room__c ),
ISBLANK( Speaking_Engagement__c )
)</errorConditionFormula>
    <errorMessage>Brand Should have a look-Up with at lest  one of the following objects -&gt; Event , Exhibit , GES Connect Event , Meeting Room , Speaking Engagement .</errorMessage>
</ValidationRule>