unpackaged/main/default/objects/GT_Brand__c/validationRules/Cancelled_Date_Field_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Date_Field_is_Required</fullName>
    <active>true</active>
    <description>Cancellation Date is required when Cancelled check box is checked.</description>
    <errorConditionFormula>AND(( Canceled__c ), 
ISBLANK(Cancelled_Date__c ))</errorConditionFormula>
    <errorDisplayField>Cancelled_Date__c</errorDisplayField>
    <errorMessage>Please enter the Cancellation date.</errorMessage>
</ValidationRule>