unpackaged/main/default/objects/GT_Brand__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand_Name_Pharma__c</columns>
    <columns>Corporate_Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>